# quad_navigation_and_target_tracking

./: CMakeLists.txt  README.md  package.xml  setup.py
dnn/: pascal_label_map.pbtxt
images/: comparison.ods  k_vs_velocity.ods  trajectory_bd.pptx
include/quad_navigation_and_target_tracking/: controller_px4.h  controller_simulation.h  ensembleGeneration.h  planner.h  planner_noRHP.h  rhp_movingtarget.h  rhp_planner.h  trajectoryGenerationOptimalControl.h  vio2cog_transform.h
launch/: jackal_ssd_detection.launch  mavros.launch  odom_conversion.launch  params.yaml  quadNavigation.rviz  quadrotor_navigation.launch  quadrotor_navigation_detection.launch  quadrotor_navigation_movingtarget.launch
msg/: DetectionData.msg
script/: counts_vs_relative_distance.py  detection_calculations.py  detection_calculations_gamma.py  gm10_ros_node.py  localpose_visionpose_comparison.py  record_trajectories.py  ssd_detection_jackal.py  ssd_detection_kalman_filter.py  ssd_kalman_filter.py
script/misc_and_plotting/: VIO_to_COG.py  collision_cost.py  compare.ods  detect_ground_vehicle.py  detection_plots.py  detection_plots2.py  ensemble.py  k_versus_velocity.py  k_versus_velocity_revised.py  min_jerk_vs_weighted_sum_objective.py  min_jerk_with_energy.py  min_snap_with_energy.py  min_snap_with_energy2.py  test.py  trajectory_generation_3d_plotting.py
script/misc_and_plotting/ss/: detection_calculations_R1.py  detection_calculations_dontuse.py  detection_calculations_old.py  detection_calculations_oldworking.py
script/plotting_noROS/: box_plot.py  ensemble.py  k_versus_velocity.py  min_jerk_with_energy_RHP.py  min_snap_with_energy.py  min_snap_with_energy_RHP.py  min_snap_with_energy_RHP2.py  test_coefficients.py
src/: controller_px4.cpp  controller_simulation.cpp  ensembleGeneration.cpp  latencyCorrection.cpp  planner_noRHP.cpp  planner_noRHP_node.cpp  rhp_movingtarget.cpp  rhp_movingtarget_node.cpp  rhp_planner.cpp  rhp_planner_node.cpp  trajectoryGenerationOptimalControl.cpp  trajectoryGenerationOptimalControlMovingTarget.cpp  vio2cog_transform.cpp  vio2cog_transform_node.cpp
src/ss/old_not_needed/: LocalPlanner.cpp  LocalPlanner.h  controller.cpp  controller.h  controller_node.cpp  controller_ss.cpp  trajectory_generation_node.cpp
src/ss/potential_backup/: TrajectoryGenerationOptimalControl.cpp  ensembleGeneration_backup.cpp  planner.cpp  planner_node.cpp  vio2cog_transform_backup.cpp  vio2cog_transform_backup.h
